# computational-geometry

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml
ComputationalGeometry/: CMakeLists.txt
ComputationalGeometry/Core/: CMakeLists.txt
ComputationalGeometry/Core/include/: point.hpp  test.hpp
ComputationalGeometry/Core/include/ComputationalGeometryCore/Algorithms/: sweepLineIntersectionCalculator.hpp  twoLinesIntersectionCalculator.hpp
ComputationalGeometry/Core/include/ComputationalGeometryCore/Entities/: point.hpp  vector3d.hpp
ComputationalGeometry/Core/src/: point.cpp  sweepLineIntersectionCalculator.cpp  test.cpp  twoLinesIntersectionCalculator.cpp  vector3d.cpp
ComputationalGeometry/Tests/: CMakeLists.txt
ComputationalGeometry/Tests/include/: pointTests.hpp  testtest.hpp
ComputationalGeometry/Tests/src/: main.cpp  pointTests.cpp  sweepLineIntersectionCalculatorTests.cpp  testtest.cpp  twoLinesIntersectionCalculatorTests.cpp  vector3dTests.cpp
ComputationalGeometry/Utilities/: CMakeLists.txt
ComputationalGeometry/Utilities/include/: logging.hpp  maths.hpp  timer.hpp  utilities.h
ComputationalGeometry/Utilities/include/ComputationalGeometryUtilities/: logging.hpp  maths.hpp  timer.hpp
ComputationalGeometry/Utilities/src/: maths.cpp  timer.cpp
